# esp-path-recorder

./: .gitignore  Cargo.toml  build.rs  sdkconfig
.cargo/: config.toml
efuse/: burn_key2.sh  devices.sh  gen_key.sh  hmac keys desc  summary.sh
src/: ext_flash.rs  led_control.rs  main.rs  security.rs  storage_driver.rs
src/storage_driver/: configuration.rs
