[package]
name = "esp-path-recorder"
version = "0.1.0"
authors = ["SkyGrel19 <skibav2002@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.80"

[[bin]]
name = "esp-path-recorder"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native", "nightly", "experimental"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49.1", default-features = false }
esp-idf-sys = { version = "0.35.0", features = ["native"] }
atomic_enum = "0.3.0"
bincode = "1.3.3"
serde = { version = "1.0.203", features = ["derive", "rc"] }
chrono = { version = "0.4.38", features = ["serde"] }
embedded-hal = "1.0.0"
thiserror = "1.0.63"
anyhow = "1.0.86"
ws2812-esp32-rmt-driver = { version = "0.9.0", features = ["smart-leds-trait"] }
smart-leds-trait = "0.3.0"
mpu6050 = "0.1.6"

[build-dependencies]
embuild = "0.32.0"

[package.metadata.esp-idf-sys]
esp_idf_tools_install_dir = "global"
idf_path = "/home/skygrel19/esp/esp-idf"
